# Coach-AI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  codex.md  pyproject.toml  test-ai.html
api/: deps.py  errors.py  main.py  routes.py  schemas.py  settings.py
docs/superpowers/plans/: 2026-05-08-sport-companion-api.md  2026-05-08-sport-companion-prototype.md
examples/: analyze_squat.py
scripts/: run-local-api.ps1
sport_companion_ai/: __init__.py  analyzer.py  errors.py  geometry.py  rep_detector.py  report.py  sampling.py  warnings.py
sport_companion_ai/exercises/: __init__.py  _common.py  badminton.py  base.py  bench.py  bicep_curl.py  deadlift.py  lateral_raise.py  lunge.py  overhead_press.py  plank.py  pullup.py  pushup.py  squat.py  yoga.py
sport_companion_ai/feedback/: enricher.py  nim.py  template.py
sport_companion_ai/pose/: extractor.py  schema.py  video_reader.py
sport_companion_ai/viz/: render.py
tests/: test_analyzer.py  test_api.py  test_api_deps.py  test_api_errors.py  test_api_settings.py  test_errors.py  test_exercise_base.py  test_geometry.py  test_nim_enricher.py  test_pose_extractor.py  test_pose_schema.py  test_rep_detector.py  test_report.py  test_sampling.py  test_template_enricher.py  test_video_reader.py  test_viz.py  test_warnings.py
tests/exercises/: _helpers.py  test_bench.py  test_bicep_curl.py  test_deadlift.py  test_new_rules.py  test_pushup.py  test_squat.py
tests/fixtures/: manifest.yaml
tests/integration/: conftest.py  test_api.py  test_squat_video.py
(+48 files in other folders)
