[project]
name = "sport-companion-ai"
version = "0.1.0"
description = "Gym video form evaluator (Phase 1 prototype)"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.20",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
    "scipy>=1.14",
    "pydantic>=2.8",
    "httpx>=0.27",
    "pillow>=10.4",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sport_companion_ai"]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests using real video fixtures (slow)",
    "requires_nim_key: tests that require NVIDIA_API_KEY env var",
]
addopts = "-m 'not integration and not requires_nim_key'"
